k8s/phm/nifi/p1/nifi-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
  labels:
    app: nifi
  namespace: nifi-namespace
spec:
  replicas: 1
  template:
    metadata:
      name: nifi
      labels:
        app: nifi
    spec:
      containers:
      - name: nifi
        image: apache/nifi:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: web
        volumeMounts:
          - mountPath: /opt/nifi/nifi-1.7.1/conf/logback.xml
            name: logback
            subPath: logback.xml
      restartPolicy: Always
      volumes:
        - name: logback
          configMap:
            name: nifi-p1
            items:
              - key: logback.xml
                path: logback.xml

  selector:
    matchLabels:
      app: nifi
