k8s/phm/nifi/p1/nifi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-nifi
  namespace: nifi-namespace
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  rules:
    - http:
        paths:
          - path: /nifi
            backend:
              serviceName: nifi-services
              servicePort: web
#          - path: /nifi-api
#            backend:
#              serviceName: nifi-services
#              servicePort: web
